--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,70 +1,27 @@
-version: '3'
-
+version: "3.8"
 services:
-  wp:
-    image: wordpress:latest # https://hub.docker.com/_/wordpress/
-    ports:
-      - ${PORT}:80 # change ip if required
-    volumes:
-      - ./config/wp_php.ini:/usr/local/etc/php/conf.d/conf.ini
-      - ./wp-app:/var/www/html # Full wordpress project
-      #- ./plugin-name/trunk/:/var/www/html/wp-content/plugins/plugin-name # Plugin development
-      #- ./theme-name/trunk/:/var/www/html/wp-content/themes/theme-name # Theme development
+  wordpress:
+    image: wordpress:5.8.3
     environment:
       WORDPRESS_DB_HOST: db
+      WORDPRESS_DB_USER: "${DB_USER}"
+      WORDPRESS_DB_PASSWORD: "${DB_PASSWORD}"
       WORDPRESS_DB_NAME: "${DB_NAME}"
-      WORDPRESS_DB_USER: root
-      WORDPRESS_DB_PASSWORD: "${DB_ROOT_PASSWORD}"
-    depends_on:
-      - db
-    links:
-      - db
-
-  wpcli:
-    image: wordpress:cli
     volumes:
-      - ./config/wp_php.ini:/usr/local/etc/php/conf.d/conf.ini
-      - ./wp-app:/var/www/html
-    environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_NAME: "${DB_NAME}"
-      WORDPRESS_DB_USER: root
-      WORDPRESS_DB_PASSWORD: "${DB_ROOT_PASSWORD}"
-    depends_on:
-      - db
-      - wp
-
-  pma:
-    image: phpmyadmin:latest  # https://hub.docker.com/_/phpmyadmin
-    environment:
-      # https://docs.phpmyadmin.net/en/latest/setup.html#docker-environment-variables
-      PMA_HOST: db
-      PMA_PORT: 3306
-      MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
-      UPLOAD_LIMIT: 50M
-    ports:
-      - 8081:80
-    links:
-      - db:db
-    volumes:
-     - ./config/pma_php.ini:/usr/local/etc/php/conf.d/conf.ini
-     - ./config/pma_config.php:/etc/phpmyadmin/config.user.inc.php
+      - wordpress_data:/var/www/html
 
   db:
-    image: mysql:latest # https://hub.docker.com/_/mysql/ - or mariadb https://hub.docker.com/_/mariadb
-    # platform: linux/x86_64  # Uncomment if your machine is running on arm (ex: Apple Silicon processor)
-    ports:
-      - 3306:3306 # change ip if required
-    command: [
-        '--character-set-server=utf8mb4',
-        '--collation-server=utf8mb4_unicode_ci'
-    ]
-    # volumes:
-    #   - ./wp-data:/docker-entrypoint-initdb.d
-    #   - db_data:/var/lib/mysql
+    image: mysql:5.7.34
+    networks:
+      - dokploy-network
     environment:
       MYSQL_DATABASE: "${DB_NAME}"
+      MYSQL_USER: "${DB_USER}"
+      MYSQL_PASSWORD: "${DB_PASSWORD}"
       MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
+    volumes:
+      - db_data:/var/lib/mysql
 
-# volumes:
-#   db_data:
+volumes:
+  wordpress_data:
+  db_data:
