--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       WORDPRESS_DB_NAME: "${DB_NAME}"
     volumes:
       - wordpress_data:/var/www/html
+    depends_on:
+      - db
 
   db:
     image: mysql:5.7.34
