--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       WORDPRESS_DB_NAME: "${DB_NAME}"
     volumes:
       - wordpress_data:/var/www/html
+      - ./theme-name/:/var/www/html/wp-content/themes/theme-name
     depends_on:
       - db
 
