--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   wordpress:
-    image: wordpress:5.8.3
+    image: wordpress:latest
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: "${DB_USER}"
@@ -9,8 +9,10 @@ services:
       WORDPRESS_DB_NAME: "${DB_NAME}"
     volumes:
       - wordpress_data:/var/www/html
-      - ./theme-name/:/var/www/html/wp-content/themes/theme-name
+      - ./theme-name:/var/www/html/wp-content/themes/theme-name
     depends_on:
+      - db
+    links:
       - db
 
   db:
