--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       WORDPRESS_DB_PASSWORD: "${DB_PASSWORD}"
       WORDPRESS_DB_NAME: "${DB_NAME}"
     volumes:
-      - ../files/custom-theme:/var/www/html/wp-content/themes/custom-theme
+      - ../files/wp-app/custom-theme:/var/www/html/wp-content/themes/custom-theme
       # - wordpress_data:/var/www/html
     depends_on:
       - init
