--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: busybox
     command: ["/bin/sh", "/init.sh"]
     volumes:
+      - wp-app:/var/www/html
       - ./wp-app:/wp-app
       - ./init.sh:/init.sh
     networks:
@@ -13,13 +14,15 @@ services:
 
   wordpress:
     image: wordpress:latest
+    networks:
+      - dokploy-network
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: "${DB_USER}"
       WORDPRESS_DB_PASSWORD: "${DB_PASSWORD}"
       WORDPRESS_DB_NAME: "${DB_NAME}"
     volumes:
-      - "../files/wp-app/custom-theme/:/var/www/html/wp-content/themes/custom-theme/"
+      - "../files/wp-app/custom-theme:/var/www/html/wp-content/themes/custom-theme"
       # - wordpress_data:/var/www/html
     depends_on:
       - init
@@ -41,4 +44,5 @@ services:
 
 volumes:
   wordpress_data:
+  wp-app:
   db_data:
